# mastercard_sgh

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mastercard/: __init__.py  dataset.py  features.py  plots.py
mastercard/modeling/: predict.py  train.py
mastercard/utils/: parquet_conventer.py
mastercard/visualisations/: categoricial_data.py  numerical_data.py
notebooks/: 1.0-mm-eda-transactions.ipynb  1.1-mm.eda-transactions-geo-analysis.ipynb  1.2-mm-eda-merchants.ipynb  1.3-mm-eda-users.ipynb  1.4-mm-eda-all.ipynb  2.1-mm-data-preprocessing.ipynb  3.0-mm-model_training.ipynb
