[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mastercard"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "azeno" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "jupyterlab>=4.4.3",
    "loguru",
    "matplotlib>=3.10.3",
    "mkdocs",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pip",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
    "xgboost>=3.0.2",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["mastercard"]
include = ["pyproject.toml", "mastercard/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mastercard"]
force-sort-within-sections = true

